--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "prepare": "cd packages/shortest && pnpm build"
   },
   "dependencies": {
-    "@playwright/test": "^1.48.1",
-    "@faker-js/faker": "^8.4.1",
     "@ai-sdk/anthropic": "^0.0.50",
     "@ai-sdk/openai": "^0.0.61",
     "@clerk/nextjs": "^5.6.0",
+    "@faker-js/faker": "^8.4.1",
     "@octokit/rest": "^21.0.2",
+    "@playwright/test": "^1.48.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -75,8 +75,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.5.0",
+    "@antiwork/shortest": "workspace:*",
     "@clerk/testing": "^1.3.32",
+    "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@types/adm-zip": "^0.5.5",
     "@types/js-yaml": "^4.0.9",
@@ -84,9 +85,7 @@
     "happy-dom": "^15.7.4",
     "js-yaml": "^4.1.0",
     "jsdom": "^25.0.1",
-    "@antiwork/shortest": "workspace:*",
     "smee-client": "^2.0.3",
-    "tsx": "^4.7.1",
-    "vitest": "^2.1.1"
+    "tsx": "^4.7.1"
   }
 }
