--- a/packages/shortest/package.json
+++ b/packages/shortest/package.json
@@ -39,26 +39,27 @@
     "test:keyboard": "tsx tests/test-keyboard.ts"
   },
   "dependencies": {
-    "glob": "^10.3.10",
     "chromium-bidi": "^0.5.2",
+    "glob": "^10.3.10",
     "otplib": "^12.0.1",
     "picocolors": "^1.0.0"
   },
   "devDependencies": {
-    "tsx": "^4.7.1",
-    "typescript": "~5.6.2",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.24"
+    "@types/node": "^20.11.24",
+    "tsx": "^4.7.1",
+    "typescript": "~5.6.2"
   },
   "engines": {
     "node": ">=18"
   },
   "peerDependencies": {
-    "playwright": "^1.48.2",
-    "esbuild": "^0.20.1",
     "@anthropic-ai/sdk": "0.32.0",
+    "mailosaur": "^8.7.0",
+    "dotenv": "^16.4.5",
+    "esbuild": "^0.20.1",
     "expect": "^29.7.0",
-    "dotenv": "^16.4.5"
+    "playwright": "^1.48.2"
   },
   "author": "Antiwork",
   "license": "MIT",
